Add official Turkey test list

--- a/ooniprobe/bet2512.yaml
+++ b/ooniprobe/bet2512.yaml
@@ -13,3 +13,8 @@ tasks:
   ooni:
     test_name: web_connectivity
     file: /var/lib/ooni/resources/bet2512.list
+
+- name: Runs the Web Connectivity Test
+  ooni:
+    test_name: web_connectivity
+    file: /var/lib/ooni/resources/tr.list
