Add EEEP Greek blocklist Version4 11072014

--- a/ooniprobe/bet2512.yaml
+++ b/ooniprobe/bet2512.yaml
@@ -18,3 +18,8 @@ tasks:
   ooni:
     test_name: web_connectivity
     file: /var/lib/ooni/resources/tr.list
+
+- name: Runs the Web Connectivity Test
+  ooni:
+    test_name: web_connectivity
+    file: /var/lib/ooni/resources/eeep-v4.list
